[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyint"
version = "0.2.1"
authors = [
  { name="Shahriar Iravanian", email="siravan@svtsim.com" },
]
description = "Hybrid (Symbolic-Numeric) Integration Package (based on sympy)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/siravan/hyint"
"Bug Tracker" = "https://github.com/siravan/hyint/issues"
